--- a/webApp/src/app/accountform/accountform.component.css
+++ b/webApp/src/app/accountform/accountform.component.css
@@ -1,8 +1,34 @@
-.example-container {
-  display: flex;
-  flex-direction: column;
+.main{
+  width: 100%;
+  height: 100%;
 }
 
-.example-container > * {
-  width: 50%;
+.center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.buttons {
+  margin-top: 10%;
+}
+
+button{
+  background-color: #96BAF2;
+  color: white;
+  margin-bottom: 5%;
+  border-radius: 100px;
+  width: calc(100% + 100px);
+}
+
+.signup{
+  background-color: white;
+  color: #96BAF2;
+  border: 1px solid #96BAF2;
+  box-shadow: 0 0 0 0;
 }
