Texte accueil centré

--- a/webApp/src/app/home/home.component.html
+++ b/webApp/src/app/home/home.component.html
@@ -9,9 +9,9 @@
 
 <div>
   <div class="overlay">
-      <p class="intro">
-          Bienvenue sur Cineweb
-      </p>
+      <div class="center">
+        <p class="intro">Bienvenue sur Cineweb</p>
+      </div>
   </div>
     <img class="mainImg" src="assets/cinema.jpg" alt="">
 </div>
