--- a/webApp/src/app/home/home.component.css
+++ b/webApp/src/app/home/home.component.css
@@ -9,6 +9,15 @@ button{
   border-radius: 100px;
 }
 
+.center{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .example-fill-remaining-space {
   flex: 1 1 auto;
 }
@@ -19,16 +28,8 @@ button{
 }
 
 .intro{
-  position: absolute;
-  width: 700px;
-  height: 50px;
-  top: 50%;
-  left: 50%;
-  margin-top: -100px;
-  margin-left: -300px;
   color: white;
-  font-size: 3em;
-  opacity: 1;
+  font-size: 3vw;
 }
 
 .overlay{
