--- a/webApp/src/app/movie-dialog/movie-dialog.component.html
+++ b/webApp/src/app/movie-dialog/movie-dialog.component.html
@@ -4,7 +4,7 @@
   <img src={{data.poster}} alt="">
   <div class="infosContainer">
     <div class="textInfos">
-        <p *ngFor="let k of keys">{{data[k]}}</p>
+        <p *ngFor="let k of keys" [innerHTML]=data[k]></p>
     </div>
   </div>
 </div>
