--- a/webApp/src/app/pages/page.component.css
+++ b/webApp/src/app/pages/page.component.css
@@ -15,3 +15,7 @@ mat-grid-tile:hover {
   transform: scale(1.05);
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.801);
 }
+.img-card {
+  width:100%;
+  height: 100%;
+}
