le bouton log out n'est plus un onglet mais du coup j'ai voulu voir si y'avait moyen de mettre le bouton tout à droit mais j'ai pas réussi

--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -15,11 +15,15 @@
     <app-page3></app-page3>
   </mat-tab>
 
-  <mat-tab>
+  <mat-tab disabled >
     <ng-template mat-tab-label>
       <button mat-flat-button *ngFor="let button of buttons" (click)="disconnectHandler()">
         {{button}}
       </button>
     </ng-template>
   </mat-tab>
+ 
+  
+  
 </mat-tab-group>
+  
