ajout des barres de tri plus jolie et  correction de la géolocalisation

--- a/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
+++ b/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
@@ -2,7 +2,7 @@
     <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            Trier par
+            {{indicationBar}}
           </mat-panel-title>
           <mat-panel-description>
             Genre
@@ -20,7 +20,7 @@
   <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Trier par
+          {{indicationBar}}
         </mat-panel-title>
         <mat-panel-description>
           Date de sortie
